<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="resource"
            type="com.pedroabinajm.easytaxichallenge.ui.commons.Resource" />
    </data>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/default_margin">


            <ImageView
                android:id="@+id/favorite_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/search_address"
                app:srcCompat="@drawable/ic_search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_toLeftOf="@id/favorite_icon"
                android:layout_toStartOf="@id/favorite_icon"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/place_name_text"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textStyle="bold"
                    app:placeName="@{resource}"
                    tools:text="Casa" />

                <TextView
                    android:id="@+id/place_description_text"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:placeDescription="@{resource}"
                    tools:text="Rua Luis Gois, 206, Ap. 92" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>