<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="resource"
            type="com.pedroabinajm.easytaxichallenge.ui.commons.Resource" />
    </data>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="@bool/transluscent_fitsSystemWindows">

        <android.support.design.internal.ScrimInsetsFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="@bool/transluscent_fitsSystemWindows"
            app:insetForeground="@color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cameraTargetLat="-23.533773"
                    app:cameraTargetLng="-46.625290"
                    app:cameraZoom="16"
                    app:uiTiltGestures="false" />

                <com.pedroabinajm.easytaxichallenge.ui.map.PlaceView
                    android:id="@+id/place_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:place="@{resource}" />

                <Space
                    android:id="@+id/center_view"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true" />

                <ImageView
                    android:id="@+id/marker_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/center_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-18dp"
                    android:contentDescription="@string/current_location"
                    android:src="@drawable/ic_cluster_marker" />

                <ImageButton
                    android:id="@+id/favorite_button"
                    style="@style/Fab.Secondary"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_above="@id/my_location_button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:alpha="0"
                    android:contentDescription="@string/center_map"
                    android:visibility="gone"
                    app:bookmarkButton="@{resource}"
                    tools:src="@drawable/ic_favorite_on" />

                <ImageButton
                    android:id="@+id/my_location_button"
                    style="@style/Fab"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/center_map"
                    android:src="@drawable/ic_centermap" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/white_gradient" />

            </RelativeLayout>
        </android.support.design.internal.ScrimInsetsFrameLayout>

    </android.support.v4.widget.DrawerLayout>
</layout>