...
            android:layout_marginRight="36dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/place_alias_description" />

        <EditText
            android:id="@+id/alias_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_text"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
...
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/divider" />

            <Button
                android:id="@+id/positive_button"
                style="@style/Button.Dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok" />

...
