...
        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/places_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:showIf="@{!resource.isEmpty &amp;&amp; resource.status != Status.LOADING}" />
...
